--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-html, body{
+html, body {
   background: #656769;
 }
+
 .App {
   text-align: center;
 }
@@ -31,7 +32,7 @@ html, body{
   color: #61dafb;
 }
 
-.counterBox{
+.counterBox {
   margin: 0 auto;
   margin-top: 50px;
   padding: 20px;
@@ -42,7 +43,8 @@ html, body{
   color: #fff;
   box-shadow: 0px 0px 30px 5px #282c34;
 }
-.counterBox button{
+
+.counterBox button {
   background-color: #61dafb;
   border: 0;
   width: 40px;
@@ -51,16 +53,24 @@ html, body{
   margin-top: 50px;
 }
 
-.counterBox button:hover{
+.counterBox button:hover {
   background-color: #fb8061;
-  
+
 }
 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.holder {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-flow: dense;
 }
