--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,7 @@ html, body {
 
 .holder {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
   grid-auto-flow: dense;
 }
